# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-ec15a89e0fe779eac9f665757d8a17732210b9d42e2bc9eea49cdf86e2bb4af1.json
auth-service/migrations/: 20260220224855_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  hashed_password.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  signup.rs  verify_2fa.rs  verify_token.rs
